<resources>
    <string name="app_name" translatable="false">LaCantinaDeProdis</string>
    <string name="txtPprincipal"><u>Selecciona el tipus d\'usuari que seràs</u></string>
    <string name="client">CLIENT/A</string>
    <string name="cambrer">CAMBRER/A</string>
    <string name="caixer">CAIXER/A</string>
    <string name="cuiner">CUINER/A</string>
    <string name="administrador">Administrador/a</string>
    <string name="iniciarSessio">Iniciar Sessió</string>
    <string name="txtPIniciarSessio_benvinguda">Hola! M\'alegro de veure\'t de nou.</string>
    <string name="editDni" translatable="false">11111111L</string>
    <string name="dni" translatable="false">DNI</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="oblidatContrasenya">Has oblidat la contrasenya?</string>
    <string name="registrat">Registra\'t</string>
    <string name="txtBenvolgutAdministrador">Benvolgut Administrador</string>
    <string name="txtAfegirNouUsuari">Afegir nou usuari</string>
    <string name="txtModificarEliminarUsuari">Modificar/Eliminar usuari</string>
    <string name="txtAfegirNouProducte">Afegir nou producte</string>
    <string name="txtAdministrarProductes">Administrar Productes</string>
    <string name="image_view_eye" translatable="false">image View eye</string>
    <string name="logo_lacantinadeprodis" translatable="false">logo laCantinaDeProdis</string>
    <string name="nom_i_cognoms">Nom i cognoms</string>
    <string name="juan_rodriguez_gonalez" translatable="false">Juan Rodriguez Gonález</string>
    <string name="correu_electronic">Correu electrònic</string>
    <string name="jrodirezgonzalez_prodiscat" translatable="false">jrodirezgonzalez@prodis.cat</string>
    <string name="repeteix_contrasenya">Torna a introduir la contrasenya</string>
    <string name="contrasenyaRepetida">Contrasenya repetida</string>
    <string name="continuar">Continuar</string>
    <string name="tens_un_compte">Tens un compte?</string>
    <string name="home" translatable="false">Home</string>
    <string name="profile" translatable="false">profile</string>
    <string name="logout" translatable="false">LogOut</string>
    <string name="torna_enrere">Torna enrere</string>
    <string name="recuperar_contrasenya">Recuperar Contrasenya</string>
    <string name="text_recuperar_contrasenya">Introdueix el DNI que fas servir per iniciar \n sessió en: La Cantina de Prodis</string>
    <string name="text_recuperar_contrasenya_dos">Ara et toca pensar en una nova contrasenya per \n iniciar sessió. Intenta que no se t\'oblidi</string>
    <string name="introdueix_el_dni">Introdueix el DNI</string>
    <string name="nova_repeteix_contrasenya">Torna a introduir la nova contrasenya</string>
    <string name="nova_contrasenya">Introdueix la nova contrasenya</string>
    <string name="txt_nou_usuari">Omple els següents camps per\nafegir a un nou usuari</string>
    <string name="guardar">Guardar</string>
    <string name="introdueix_el_nom_de_l_usuari">Introdueix el nom de l\'usuari</string>
    <string name="juan" translatable="false">Juan</string>
    <string name="introdueix_els_cognoms_de_l_usuari">Introdueix els cognoms de l\'usuari</string>
    <string name="rodriguez_gonz_lez" translatable="false">Rodriguez González</string>
    <string name="selecciona_l_usuari_que_vols_modificar">Selecciona l\'usuari que vols modificar</string>
    <string name="eliminar_usuari">Eliminar usuari</string>
    <string name="cognoms_de_l_usuari">Cognoms de l\'usuari</string>
    <string name="nom_de_l_usuari">Nom de l\'usuari</string>
    <string name="afegir_nou_producte_promocio">Afegir nou producte / promoció</string>
    <string name="selecciona_la_categoria">Selecciona la categoria</string>
    <string name="condicions_servei_privacitat">Accepto les Condicions del Servei \n i Política de privacitat</string>
    <string name="bocata">BOCATA</string>
    <string name="begudes_fredes">BEGUDES FREDES</string>
    <string name="begudes_calentes">BEGUDES CALENTES</string>
    <string name="finalitza_comanda">FINALITZA COMANDA</string>
    <string name="sense_tomaquet">SENSE TOMÀQUET</string>
    <string name="per_emportar">PER EMPORTAR</string>
    <string name="img_bossa_description">Una imatge d\'una bossa que indica que vol la comanda per emportar</string>
    <string name="descripcio_img_tick">Un botó en forma de tick.</string>
    <string name="descripcio_img_fletxa">Un botó amb forma de fletxa que indica tornar enrere.</string>
    <string name="descripció_img_tomaquet">Una imatge d\'un tomàquet.</string>
    <string name="descripcio_img_prohibit">Una imatge d\'una forma de prohibit.</string>
    <string name="descripcio_img_tomaquet">Una imatge d\'un tomàquet.</string>
    <string name="descripcio_img_bossa">Una imatge d\'una bossa.</string>
    <string name="sense_sucre">SENSE SUCRE</string>
    <string name="sucre_blanc">SUCRE BLANC</string>
    <string name="sucre_more">SUCRE MORÉ</string>
    <string name="sacarina">SACARINA</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="perfil_info">Aquí pots canviar la informació del teu perfil!</string>
    <string name="nom">Nom:</string>
    <string name="cognom">Cognom:</string>
    <string name="correu">Correu electrònic:</string>
    <string name="oblidat_contrsenya"><u>Has oblidat la contrasenya?</u></string>
    <string name="tamany_lletra">Mida de la lletra</string>
    <string name="cambiar_foto">Canviar foto</string>
    <string name="tamany_gran" translatable="false">Aa</string>
    <string name="posa_correu">Posa aquí el teu correu electrònic</string>
    <string name="imatge_del_usuari">Imatge de l\'usuari</string>
    <string name="posa_aqui_el_teu_nom">Posa aquí el teu nom</string>
    <string name="posa_aqui_el_teu_cognom">Posa aquí el teu cognom</string>
    <string name="tamany_petit" translatable="false">Aa</string>
    <string name="cambiar_contrasenya">Canviar contrasenya</string>
    <string name="posa_aqui_la_contrasenya">Posa aquí la teva nova contrasenya (opcional)</string>
    <string-array name="tipus_producte">
        <item>Bocata</item>
        <item>Beguda calenta</item>
        <item>Beguda freda</item>
    </string-array>
    <string name="producte">Producte</string>
    <string name="introdueix_el_nom_del_producte_promoci">Introdueix el nom del producte / promoció</string>
    <string name="selecciona_el_preu">Selecciona el preu</string>
    <string name="afegeix_una_foto">Afegeix una foto</string>
    <string name="_1" translatable="false">1€</string>
    <string name="_2" translatable="false">2€</string>
    <string name="altre_preu">Altre preu</string>
    <string name="imatge_de_una_camera_de_fotos">Imatge d\'una càmera de fotos</string>
    <string name="introdueix_el_preu">Introdueix el preu</string>
    <string name="fletxa_per_pujar_fotos">Imatge d\'una fletxa per indicar que es poden pujar fotos</string>
    <string name="foto_del_producte">Foto del producte</string>
    <string name="administrar_productes">Administrar productes</string>
    <string name="selecciona_el_producte">Selecciona el producte</string>
    <string name="producte_visible">Producte visible</string>
    <string name="preu_del_producte">Preu del producte</string>
    <string name="nom_del_producte">Nom del producte</string>
    <string name="canviar_imatge">Canviar imatge</string>
    <string name="item_image" translatable="false">item image</string>
    <string name="tipus_d_usuari">Tipus d\'usuari</string>
    <string name="introdueix_el_nom_del_client">Introdueix el nom del client</string>
    <string name="extern">Extern</string>
    <string name="juan_rodriguez_gonz_lez" translatable="false">Juan Rodriguez González</string>
    <string name="cognoms">Cognoms</string>
    <string name="acceptar">Acceptar</string>
    <string name="minimitzar">minimitzar</string>
    <string name="comanda_feta">Comanda feta</string>
    <string name="selecciona_una_comanda_per_veure_el_resum">Selecciona una comanda per veure el resum</string>
    <string name="resum_comanda">Resum comanda</string>
    <string name="marcar_com_pagat" >Marcar com pagat</string>
    <string name="comanda_1">Comanda 1</string>
    <string name="total">TOTAL:</string>
    <string name="idioma_de_l_app">Idioma de l\'app</string>
    <string name="bocata_de_pernil_salat">Bocata de pernil salat</string>
    <string name="estas_segur_que_vols_eliminar_a_usuari">Estas segur que vols eliminar a l\'usuari: </string>
    <string name="avis">¡¡¡AVIS!!!</string>
    <string name="cancelar">Cancel·lar</string>
    <string name="error_en_el_tipus_de_usuari">ERROR EN EL TIPUS DE USUARI</string>
    <string name="atencio">¡¡¡ATENCIÓ!!!</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="has_de_seleccionar_un_tipus_d_usuari">Has de seleccionar un tipus d\'usuari</string>
    <string name="error" translatable="false">¡¡¡ERROR!!!</string>
    <string name="usuari_eliminat_correctament">Usuari eliminat correctament</string>
    <string name="usuari_no_s_ha_pogut_eliminar">L\'usuari no s\'ha pogut eliminar</string>
    <string name="error_en_intentar_eliminar_usuari">Hi ha hagut un error en intentar eliminar a l\'usuari</string>
    <string name="s_ha_canviat_la_contrasenya">S\'ha canviat la contrasenya</string>
    <string name="error_en_canviar_la_contrasenya">Error en canviar la contrasenya</string>
    <string name="l_usuari_no_esta_registrat">L\'usuari no està registrat</string>
    <string name="error_en_inici_de_sessio">Error en inici de sessió</string>
    <string name="aquest_usuari_no_es_de_tipus">"Aquest usuari no es deno es  tipus "</string>
    <string name="falta_omplir_els_camps">Falta omplir els camps</string>
    <string name="el_camp_dni_esta_buit">El camp DNI està buit</string>
    <string name="les_contrasenyes_no_coincideixen">Les contrasenyes no coincideixen.</string>
    <string name="els_camps_no_estan_plens">Els camps no estan plens</string>
    <string name="error_en_recuperar_contrasenya">Error en recuperar contrasenya</string>
    <string name="t_has_registrat_correctament">T\'has registrat correctament</string>
    <string name="error_en_guardar_dades">Error a l\'hora de fer el guardat de dades</string>
    <string name="falta_introduir_el_nom">Falta introduir el nom\n</string>
    <string name="falta_introduir_els_cognoms">Falta introduir els cognoms\n</string>
    <string name="falta_introduir_el_dni">Falta introduir el dni\n</string>
    <string name="format_dni_incorrecte">Format DNI incorrecte.\n</string>
    <string name="falta_introduir_email">Falta introduir el correu electronic.\n</string>
    <string name="format_email_incorrecte">Format correu electronic incorrecte.\n</string>
    <string name="falta_introduir_la_passwd">Falta introduir la contrasenya.\n</string>
    <string name="falta_introduir_la_contrasenya_repetida">Falta introduir la contrasenya repetida.\n</string>
    <string name="contrasenyes_no_coincideixen">Les contrasenyes no coincideixen.\n</string>
    <string name="acceptar_condicions">Has d\'acceptar les condicions</string>
    <string name="has_de_seleccionar_un_tipus_de_producte">Has de seleccionar un tipus de producte</string>
    <string name="error_al_pujar_la_foto">Error en pujar la foto</string>
    <string name="exit_al_pujar_la_foto">Èxit en pujar la foto</string>
    <string name="s_ha_afegit_el_producte_amb_exit">S\'ha afegit el producte amb èxit</string>
    <string name="has_d_introduir_el_nom">"Has d\'introduïr el nom\r"</string>
    <string name="has_d_introduir_el_cognom">"Has d\'introduïr el cognom\r"</string>
    <string name="d_on_vols_treure_la_foto">D\'on vols treure la foto?</string>
    <string name="selecciona_un">Selecciona un:</string>
    <string name="galeria">GALERIA</string>
    <string name="camara">CÀMERA</string>
</resources>