<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFons">

            <ImageView
                android:id="@+id/imgTomaquet"
                android:layout_width="216dp"
                android:layout_height="156dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/descripcio_img_tomaquet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/sense_tomaquet_foreground" />

            <ImageView
                android:id="@+id/imgProhibit"
                android:layout_width="153dp"
                android:layout_height="155dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/descripcio_img_prohibit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_block_24" />

            <ImageView
                android:id="@+id/imgBossa"
                android:layout_width="240dp"
                android:layout_height="202dp"
                android:contentDescription="@string/descripcio_img_bossa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxSenseTomaquet"
                app:srcCompat="@mipmap/per_emportar_foreground" />

            <CheckBox
                android:id="@+id/checkBoxPerEmportar"
                android:layout_width="295dp"
                android:layout_height="62dp"
                android:layout_marginTop="-20dp"
                android:text="@string/per_emportar"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBossa" />

            <CheckBox
                android:id="@+id/checkBoxSenseTomaquet"
                android:layout_width="295dp"
                android:layout_height="62dp"
                android:text="@string/sense_tomaquet"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProhibit" />

            <ImageButton
                android:id="@+id/btnConfirmar"
                android:layout_width="214dp"
                android:layout_height="156dp"
                android:layout_marginStart="200dp"
                android:background="@color/colorFons"
                android:contentDescription="@string/descripcio_img_tick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_baseline_check_circle_outline_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btnTornaEnrerre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorFons"
                android:contentDescription="@string/descripcio_img_fletxa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnConfirmar"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_fletxa_enrerre"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>