<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.principal.PantallaRecuperarContrasenya2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFons"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="741dp"
                android:layout_height="520dp"
                android:layout_marginBottom="372dp"
                android:contentDescription="@string/logo_lacantinadeprodis"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/logo_foreground" />

            <TextView
                android:id="@+id/txtPRecuperarContrasenya1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:text="@string/recuperar_contrasenya"
                android:textSize="@dimen/btnPprincipalCliCambCuiCaix"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtPRecuperarContrasenya1_info"
                app:layout_constraintStart_toStartOf="@+id/txtPRecuperarContrasenya1_info" />

            <TextView
                android:id="@+id/txtPRecuperarContrasenya1_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:text="@string/text_recuperar_contrasenya_dos"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/txtPRegistreContrasenya"
                app:layout_constraintStart_toStartOf="@+id/dtTxtPRegistrePassword"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


            <TextView
                android:id="@+id/txtPRegistreContrasenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/nova_contrasenya"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txtRegistreIniciSessio"
                app:layout_constraintBottom_toTopOf="@+id/dtTxtPRegistrePassword"
                app:layout_constraintStart_toStartOf="@+id/dtTxtPRegistrePassword"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/dtTxtPRegistrePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/contrasenya"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#616161"
                app:layout_constraintBottom_toTopOf="@+id/txtPRegistreRepeteixContrasenya"
                app:layout_constraintStart_toStartOf="@+id/dtTxtPRegistreRepeteixPassword"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtPRegistreRepeteixContrasenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/nova_repeteix_contrasenya"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txtRegistreIniciSessio"
                app:layout_constraintBottom_toTopOf="@+id/dtTxtPRegistreRepeteixPassword"
                app:layout_constraintStart_toStartOf="@+id/dtTxtPRegistreRepeteixPassword"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/dtTxtPRegistreRepeteixPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="185dp"
                android:layout_marginBottom="64dp"
                android:ems="10"
                android:hint="@string/contrasenyaRepetida"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btnPRecuperarContrasenya2_continuar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btnPRecuperarContrasenya2_continuar"
                android:layout_width="227dp"
                android:layout_height="42dp"
                android:layout_marginStart="69dp"
                android:layout_marginEnd="115dp"
                android:layout_marginBottom="108dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/continuar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
