<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".principal.PantallaRecuperarContrasenya1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFons"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="741dp"
                android:layout_height="520dp"
                android:layout_marginBottom="372dp"
                android:contentDescription="@string/logo_lacantinadeprodis"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/logo_foreground" />

            <TextView
                android:id="@+id/txtPRecuperarContrasenya1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/recuperar_contrasenya"
                android:textSize="@dimen/btnPprincipalCliCambCuiCaix"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtPRecuperarContrasenya1_info"
                app:layout_constraintStart_toStartOf="@+id/txtPRecuperarContrasenya1_info" />

            <TextView
                android:id="@+id/txtPRecuperarContrasenya1_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/text_recuperar_contrasenya"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/txtPRecuperarContrasenya1_DNI"
                app:layout_constraintStart_toStartOf="@+id/txtPRecuperarContrasenya1_DNI"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/txtPRecuperarContrasenya1_DNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/introdueix_el_dni"
                android:textColor="#00796B"
                android:textSize="@dimen/txtRegistreIniciSessio"
                app:layout_constraintStart_toStartOf="@+id/dtTxtPRecuperarContrasenya1_DNI"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

            <EditText
                android:id="@+id/dtTxtPRecuperarContrasenya1_DNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="176dp"
                android:layout_marginBottom="114dp"
                android:autofillHints="nif"
                android:ems="10"
                android:hint="@string/editDni"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/btnPRecuperarContrasenya1_continuar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPRecuperarContrasenya1_DNI"
                tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btnPRecuperarContrasenya1_continuar"
                android:layout_width="227dp"
                android:layout_height="42dp"
                android:layout_marginStart="69dp"
                android:layout_marginEnd="115dp"
                android:layout_marginBottom="108dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/continuar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>